--- a/views/achievments.ejs
+++ b/views/achievments.ejs
@@ -1,8 +1,3 @@
-{% extends "base.html" %}
-
-{% block title %}Achievements - FitTracker{% endblock %}
-
-{% block content %}
 <div class="page-header">
     <h1>Achievements</h1>
     <p>Track your milestones and earn rewards for your dedication.</p>
@@ -43,17 +38,16 @@
         <div class="achievement-reward">Reward: 75 points</div>
     </div>
 </div>
-{% endblock %}
 
-{% block scripts %}
+<script>
 setActiveNav('achievements');
 
 async function loadAchievements() {
-    const token = localStorage.getItem('token');
+    const token = localStorage.getItem('jwtToken');
     
     try {
         const response = await fetch('/api/achievements', {
-            headers: { 'Authorization': `Bearer ${token}` }
+            headers: { 'Authorization': token }
         });
         
         if (response.ok) {
@@ -66,4 +60,4 @@ async function loadAchievements() {
 }
 
 loadAchievements();
-{% endblock %}
+</script>
