--- a/views/community.ejs
+++ b/views/community.ejs
@@ -1,8 +1,3 @@
-{% extends "base.html" %}
-
-{% block title %}Community - FitTracker{% endblock %}
-
-{% block content %}
 <div class="page-header">
     <h1>Community</h1>
     <p>Connect with other fitness enthusiasts and join challenges.</p>
@@ -33,8 +28,7 @@
         </div>
     </div>
 </div>
-{% endblock %}
 
-{% block scripts %}
+<script>
 setActiveNav('community');
-{% endblock %}
+</script>
