--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -1,8 +1,3 @@
-{% extends "base.html" %}
-
-{% block title %}Progress - FitTracker{% endblock %}
-
-{% block content %}
 <div class="page-header">
     <h1>Progress Analytics</h1>
     <p>Visualize your fitness journey with detailed analytics.</p>
@@ -24,8 +19,7 @@
         <p style="text-align: center; color: #6b7280;">Complete some workouts to see your exercise statistics!</p>
     </div>
 </div>
-{% endblock %}
 
-{% block scripts %}
+<script>
 setActiveNav('progress');
-{% endblock %}
+</script>
